--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "jest": "^26.6.0",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "react": "^17.0.2",
